--- a/gestor_proyectos_aaron/views/trabajo.xml
+++ b/gestor_proyectos_aaron/views/trabajo.xml
@@ -13,20 +13,21 @@
             <field name="fechaFin"/>
             <field name="responsableTrabajo"/>
             <field name = "proyecto_id"/>
+            <field name="state"/>
+
 
         </list>
         </field>
     </record>
-
-
-    <!-- actions opening views on models -->
-
+    
 
     <record model="ir.actions.act_window" id="gestor_proyectos_aaron.trabajo_action_window">
         <field name="name">Vista de proyectos</field>
         <field name="res_model">gestor_proyectos_aaron.trabajo</field>
         <field name="view_mode">list,form</field>
     </record>
+
+
 
 
     <menuitem name="Trabajos" id="gestor_proyectos_aaron.menu_2_list" parent="gestor_proyectos_aaron.menu_1"
