Módulo de gestor de proyectos 15/01/2026

--- a/gestor_proyectos_aaron/views/trabajo.xml
+++ b/gestor_proyectos_aaron/views/trabajo.xml
@@ -15,28 +15,24 @@
             <field name = "proyecto_id"/>
             <field name="state_id"/>
             <field name="porcentaje_avance" widget="progressbar"/>
-
-
-
         </list>
         </field>
     </record>
 
 
 
-        <record model="ir.ui.view" id="gestor_proyectos_aaron.trabajo_list">
-        <field name="name">Lista de trabajos</field>
+
+        <record model="ir.ui.view" id="gestor_proyectos_aaron.trabajo_form">
+        <field name="name">Formulario de trabajos</field>
         <field name="model">gestor_proyectos_aaron.trabajo</field>
         <field name="arch" type="xml">
-        <list>
+        <form>
             <field name="descripcionTrabajo"/>
             <field name="fechaInicio"/>
             <field name="fechaFin"/>
-            <field name = "responsableTrabajo"/>
+            <field name ="responsableTrabajo"/>
             <field name="state_id"/>
-
-
-        </list>
+        </form>
         </field>
     </record>
     
@@ -47,11 +43,6 @@
         <field name="view_mode">list,form</field>
     </record>
 
-
-
-
-    <menuitem name="Trabajos" id="gestor_proyectos_aaron.menu_2_list" parent="gestor_proyectos_aaron.menu_1"
-        action="gestor_proyectos_aaron.trabajo_action_window"/>
 
     </data>
 </odoo>
