--- a/gestor_proyectos_aaron/views/actividad.xml
+++ b/gestor_proyectos_aaron/views/actividad.xml
@@ -7,14 +7,37 @@
       <field name="model">gestor_proyectos_aaron.actividad</field>
       <field name="arch" type="xml">
         <list>
-          <field name="descripcionTrabajo"/>
+          <field name="descripcionActividad"/>
           <field name="fechaInicio"/>
           <field name="fechaFin"/>
           <field name="responsableActividad"/>
           <field name="trabajo_id"/>
           <field name="state_id"/>
+          <field name="porcentajeIndividual"/>
 
         </list>
+      </field>
+    </record>
+
+      <record id="view_proyecto_form" model="ir.ui.view">
+      <field name="name">Formulario de actividades</field>
+      <field name="model">gestor_proyectos_aaron.actividad</field>
+      <field name="arch" type="xml">
+        <form>
+          <sheet>
+            <group>
+              <field name="descripcionActividad"/>
+              <field name="fechaInicio"/>
+              <field name="fechaFin"/>
+            </group>
+            <group>
+              <field name="responsableActividad"/>
+              <field name="state_id"/>
+              <field name="trabajo_id"/>
+              <field name="porcentajeIndividual"/>
+            </group>
+          </sheet>
+        </form>
       </field>
     </record>
     
@@ -28,10 +51,6 @@
       <field name="view_mode">list,form</field>
     </record>
 
-    <!-- actions -->
-
-    <menuitem name="Actividades" id="gestor_proyectos_aaron.menu_3_list" parent="gestor_proyectos_aaron.menu_1"
-        action="gestor_proyectos_aaron.actividad_action_window"/>
 
   </data>
 </odoo>
