--- a/gestor_proyectos_aaron/views/estado.xml
+++ b/gestor_proyectos_aaron/views/estado.xml
@@ -12,6 +12,23 @@
         </list>
       </field>
     </record>
+
+
+<!-- Vista de formulario para autores -->
+    <record id="view_state_form" model="ir.ui.view">
+      <field name="name">Formulario de estados</field>
+      <field name="model">gestor_proyectos_aaron.estado</field>
+      <field name="arch" type="xml">
+        <form>
+          <sheet>
+            <group>
+              <field name="code"/>
+              <field name="name"/>
+            </group>
+          </sheet>
+        </form>
+      </field>
+    </record>
     
 
 
@@ -23,10 +40,6 @@
       <field name="view_mode">list,form</field>
     </record>
 
-    <!-- actions -->
-
-    <menuitem name="Estados" id="gestor_proyectos_aaron.menu_4_list" parent="gestor_proyectos_aaron.menu_1"
-        action="gestor_proyectos_aaron.estado_action_window"/>
 
   </data>
 </odoo>
