Versión final del módulo de gestión de proyectos
Versión del módulo de gestión de proyectos a días 17/01/2026, siendo esta su versión final

--- a/gestor_proyectos_aaron/views/actividad.xml
+++ b/gestor_proyectos_aaron/views/actividad.xml
@@ -13,7 +13,7 @@
           <field name="responsableActividad"/>
           <field name="trabajo_id"/>
           <field name="state_id"/>
-          <field name="porcentajeIndividual"/>
+          <field name="porcentajeIndividual" widget="progressbar"/>
 
         </list>
       </field>
@@ -40,6 +40,7 @@
         </form>
       </field>
     </record>
+    
     
 
 
